parser/generated/SplParser.js
// Generated from Spl.g4 by ANTLR 4.7.1
// jshint ignore: start
var antlr4 = require('antlr4/index');
var SplListener = require('./SplListener').SplListener;
var grammarFileName = "Spl.g4";



var atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

var decisionsToDFA = atn.decisionToState.map( function(ds, index) { return new antlr4.dfa.DFA(ds, index); });

var sharedContextCache = new antlr4.PredictionContextCache();

var literalNames = [ null, "';'", "':'", "'/'", "'\\'", "'['", "']'", "'('", 
                     "')'", "'>'", "'<'", "'='", "'''", "'.'", "','", null, 
                     null, "'DEFINE'", "'NAMESPACE'", "'REF'", "'DESCRIPTION'", 
                     "'BEGINS'", "'ENDS'", "'WITH'", "'BUNDLETYPE'", "'TABLE'", 
                     "'LINEGRAB'", "'COLUMN'", "'AS'", "'WITH NAME'", "'TYPE'", 
                     "'FILEPATTERN'", "'SOLRMAPPING'", "'CONTEXT'", "'MULTILINE'", 
                     "'SETXMLNAMESPACE'", "'NOT'", "'XML'", "'JSON'", "'SKIP'", 
                     "'ICON'", "'nvpair_basic'", "'list_basic'", "'aligned_basic'", 
                     "'xml_basic'", "'csv_withheader'", "'csv_noheader'", 
                     null, null, "'SOLR'", "'LOCK'", "'CONSTRAIN'", "'COLDROP'", 
                     "'COLFILL'", "'COLJOIN'", "'COLCOPY'", "'ADD_CONTEXT'", 
                     "'COLSPLIT'", "'COLREP'", "'COLMAP'", "'COLCALC'", 
                     "'COLCASE'", "'COLELSE'", "'COLEND'", "'COLWHEN'", 
                     "'COLCOUNT'", "'COLPRINT'", null, null, null, null, 
                     null, null, "'name='", "'datatype='", "'multivalued='", 
                     "'uniquefielddef='", "'omitnorms='", "'storetermvectors='", 
                     "'storetermpositions='", "'storetermoffsets='", "'sysid1='", 
                     "'sysid2='", "'sysid3='", "'sessionid1='", "'sessionid2='", 
                     "'sessionid3='", "'sessionname='", "'sessionattr='", 
                     "'sessioncount='", "'filename='", "'ts='", "'linked='", 
                     "'content='", "'fragment_id='", "'obs_url='", "'obs_size='", 
                     "'uploaded_by='", "'facet='", "'severity='", "'units='", 
                     "'label='", "'begin_offset='", "'namespace='", "'type='", 
                     "'[L]'", "'[R]'", "'[C]'", null, null, "'0'", "''''" ];

var symbolicNames = [ null, "SEMICOLON", "COLON", "DIVIDE", "BACKSLASH", 
                      "OPENSQUARE", "CLOSESQUARE", "OPENPARENTHESIS", "CLOSEPARENTHESIS", 
                      "GT", "LT", "EQUAL", "SINGLEQUOT", "DOT", "COMMA", 
                      "COMMENT", "WS", "DEFINE", "NAMESPACE", "REF", "DESCRIPTION", 
                      "BEGINS", "ENDS", "WITH", "BUNDLETYPE", "TABLE", "LINEGRAB", 
                      "COLUMN", "AS", "WITH_NAME", "TYPE", "FILEPATTERN", 
                      "SOLRMAPPING", "CONTEXT", "MULTILINE", "SETXMLNAMESPACE", 
                      "NOT", "XML", "JSON", "SKIP_N", "ICON", "NV_PAIR", 
                      "LIST_BASIC", "ALIGNED_BASIC", "XML_BASIC", "CSV_WITHHEADER", 
                      "CSV_NOHEADER", "NULL_DEF", "NS_TYPES", "SOLR", "LOCK", 
                      "CONSTRAIN", "COLDROP", "COLFILL", "COLJOIN", "COLCOPY", 
                      "ADD_CONTEXT", "COLSPLIT", "COLREP", "COLMAP", "COLCALC", 
                      "COLCASE", "COLELSE", "COLEND", "COLWHEN", "COLCOUNT", 
                      "COLPRINT", "FUNCTION", "INT", "DT", "REGEX", "COLCALC_CATCH_ALL", 
                      "QUOTED_LABEL", "SOLRMAPPING_NAME", "SOLRMAPPING_DATATYPE", 
                      "SOLRMAPPING_MULTIVALUED", "SOLRMAPPING_UNIQFLDEF", 
                      "SOLRMAPPING_OMITNORMS", "SOLRMAPPING_STORETV", "SOLRMAPPING_STORETP", 
                      "SOLRMAPPING_STORETO", "COLMETA_SYSID1", "COLMETA_SYSID2", 
                      "COLMETA_SYSID3", "COLMETA_SESSID1", "COLMETA_SESSID2", 
                      "COLMETA_SESSID3", "COLMETA_SESS_NAME", "COLMETA_SESS_ATTR", 
                      "COLMETA_SESS_COUNT", "COLMETA_FILENAME", "COLMETA_TS", 
                      "COLMETA_LINKED", "COLMETA_CONTENT", "COLMETA_FRAGMENT_ID", 
                      "COLMETA_OBSURL", "COLMETA_OBSSIZE", "COLMETA_UPLOADEDBY", 
                      "COLMETA_FACET", "COLMETA_SEVERITY", "COLMETA_UNITS", 
                      "COLMETA_LABEL", "COLMETA_BEGIN_OFFSET", "COLMETA_NAMESPACE", 
                      "COLMETA_TYPE", "ALIGNED_BASIC_L", "ALIGNED_BASIC_R", 
                      "ALIGNED_BASIC_C", "IDENT", "IDENT_DOT", "ZERO", "EMPTY_QUOTE" ];

var ruleNames =  [ "splg", "define", "namespace", "namespace_def", "ns_name", 
                   "ns_type_def", "ns_ref_name", "bundle_type", "ns_ctx", 
                   "begins_with", "ends_with", "file_pattern", "table", 
                   "table_def", "icon_def", "csv_icon_def", "list_basic_icon_def", 
                   "nvpair_icon_def", "aligned_basic_icon_def", "xml_icon_def", 
                   "multiline", "skip_n", "set_xml_ns", "add_context", "constrain", 
                   "column_def", "obj_ref", "data_type", "label_def", "attrib_def", 
                   "colmeta_attrib_name", "colmeta_attrib_value", "as_def", 
                   "with_name_def", "solr_mapping", "solr_mapping_def", 
                   "solr_mapping_attr_name", "solr_mapping_attr_value", 
                   "alignment", "generic_colop_def", "col_op_def", "colcopy", 
                   "colcopy_param", "coljoin", "coljoin_param", "colsplit", 
                   "colsplit_param", "colrep", "colrep_param", "colfill", 
                   "colfill_param", "colmap", "colmap_param", "colcalc", 
                   "colcount", "colcount_param", "coldrop", "coldrop_param", 
                   "colprint", "colprint_param", "colwhen", "colwhen_param", 
                   "colcase", "colcase_when", "colcase_when_nested", "colcase_else" ];

function SplParser (input) {
	antlr4.Parser.call(this, input);
    this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
    this.ruleNames = ruleNames;
    this.literalNames = literalNames;
    this.symbolicNames = symbolicNames;
    return this;
}

SplParser.prototype = Object.create(antlr4.Parser.prototype);
SplParser.prototype.constructor = SplParser;

Object.defineProperty(SplParser.prototype, "atn", {
	get : function() {
		return atn;
	}
});

SplParser.EOF = antlr4.Token.EOF;
SplParser.SEMICOLON = 1;
SplParser.COLON = 2;
SplParser.DIVIDE = 3;
SplParser.BACKSLASH = 4;
SplParser.OPENSQUARE = 5;
SplParser.CLOSESQUARE = 6;
SplParser.OPENPARENTHESIS = 7;
SplParser.CLOSEPARENTHESIS = 8;
SplParser.GT = 9;
SplParser.LT = 10;
SplParser.EQUAL = 11;
SplParser.SINGLEQUOT = 12;
SplParser.DOT = 13;
SplParser.COMMA = 14;
SplParser.COMMENT = 15;
SplParser.WS = 16;
SplParser.DEFINE = 17;
SplParser.NAMESPACE = 18;
SplParser.REF = 19;
SplParser.DESCRIPTION = 20;
SplParser.BEGINS = 21;
SplParser.ENDS = 22;
SplParser.WITH = 23;
SplParser.BUNDLETYPE = 24;
SplParser.TABLE = 25;
SplParser.LINEGRAB = 26;
SplParser.COLUMN = 27;
SplParser.AS = 28;
SplParser.WITH_NAME = 29;
SplParser.TYPE = 30;
SplParser.FILEPATTERN = 31;
SplParser.SOLRMAPPING = 32;
SplParser.CONTEXT = 33;
SplParser.MULTILINE = 34;
SplParser.SETXMLNAMESPACE = 35;
SplParser.NOT = 36;
SplParser.XML = 37;
SplParser.JSON = 38;
SplParser.SKIP_N = 39;
SplParser.ICON = 40;
SplParser.NV_PAIR = 41;
SplParser.LIST_BASIC = 42;
SplParser.ALIGNED_BASIC = 43;
SplParser.XML_BASIC = 44;
SplParser.CSV_WITHHEADER = 45;
SplParser.CSV_NOHEADER = 46;
SplParser.NULL_DEF = 47;
SplParser.NS_TYPES = 48;
SplParser.SOLR = 49;
SplParser.LOCK = 50;
SplParser.CONSTRAIN = 51;
SplParser.COLDROP = 52;
SplParser.COLFILL = 53;
SplParser.COLJOIN = 54;
SplParser.COLCOPY = 55;
SplParser.ADD_CONTEXT = 56;
SplParser.COLSPLIT = 57;
SplParser.COLREP = 58;
SplParser.COLMAP = 59;
SplParser.COLCALC = 60;
SplParser.COLCASE = 61;
SplParser.COLELSE = 62;
SplParser.COLEND = 63;
SplParser.COLWHEN = 64;
SplParser.COLCOUNT = 65;
SplParser.COLPRINT = 66;
SplParser.FUNCTION = 67;
SplParser.INT = 68;
SplParser.DT = 69;
SplParser.REGEX = 70;
SplParser.COLCALC_CATCH_ALL = 71;
SplParser.QUOTED_LABEL = 72;
SplParser.SOLRMAPPING_NAME = 73;
SplParser.SOLRMAPPING_DATATYPE = 74;
SplParser.SOLRMAPPING_MULTIVALUED = 75;
SplParser.SOLRMAPPING_UNIQFLDEF = 76;
SplParser.SOLRMAPPING_OMITNORMS = 77;
SplParser.SOLRMAPPING_STORETV = 78;
SplParser.SOLRMAPPING_STORETP = 79;
SplParser.SOLRMAPPING_STORETO = 80;
SplParser.COLMETA_SYSID1 = 81;
SplParser.COLMETA_SYSID2 = 82;
SplParser.COLMETA_SYSID3 = 83;
SplParser.COLMETA_SESSID1 = 84;
SplParser.COLMETA_SESSID2 = 85;
SplParser.COLMETA_SESSID3 = 86;
SplParser.COLMETA_SESS_NAME = 87;
SplParser.COLMETA_SESS_ATTR = 88;
SplParser.COLMETA_SESS_COUNT = 89;
SplParser.COLMETA_FILENAME = 90;
SplParser.COLMETA_TS = 91;
SplParser.COLMETA_LINKED = 92;
SplParser.COLMETA_CONTENT = 93;
SplParser.COLMETA_FRAGMENT_ID = 94;
SplParser.COLMETA_OBSURL = 95;
SplParser.COLMETA_OBSSIZE = 96;
SplParser.COLMETA_UPLOADEDBY = 97;
SplParser.COLMETA_FACET = 98;
SplParser.COLMETA_SEVERITY = 99;
SplParser.COLMETA_UNITS = 100;
SplParser.COLMETA_LABEL = 101;
SplParser.COLMETA_BEGIN_OFFSET = 102;
SplParser.COLMETA_NAMESPACE = 103;
SplParser.COLMETA_TYPE = 104;
SplParser.ALIGNED_BASIC_L = 105;
SplParser.ALIGNED_BASIC_R = 106;
SplParser.ALIGNED_BASIC_C = 107;
SplParser.IDENT = 108;
SplParser.IDENT_DOT = 109;
SplParser.ZERO = 110;
SplParser.EMPTY_QUOTE = 111;

SplParser.RULE_splg = 0;
SplParser.RULE_define = 1;
SplParser.RULE_namespace = 2;
SplParser.RULE_namespace_def = 3;
SplParser.RULE_ns_name = 4;
SplParser.RULE_ns_type_def = 5;
SplParser.RULE_ns_ref_name = 6;
SplParser.RULE_bundle_type = 7;
SplParser.RULE_ns_ctx = 8;
SplParser.RULE_begins_with = 9;
SplParser.RULE_ends_with = 10;
SplParser.RULE_file_pattern = 11;
SplParser.RULE_table = 12;
SplParser.RULE_table_def = 13;
SplParser.RULE_icon_def = 14;
SplParser.RULE_csv_icon_def = 15;
SplParser.RULE_list_basic_icon_def = 16;
SplParser.RULE_nvpair_icon_def = 17;
SplParser.RULE_aligned_basic_icon_def = 18;
SplParser.RULE_xml_icon_def = 19;
SplParser.RULE_multiline = 20;
SplParser.RULE_skip_n = 21;
SplParser.RULE_set_xml_ns = 22;
SplParser.RULE_add_context = 23;
SplParser.RULE_constrain = 24;
SplParser.RULE_column_def = 25;
SplParser.RULE_obj_ref = 26;
SplParser.RULE_data_type = 27;
SplParser.RULE_label_def = 28;
SplParser.RULE_attrib_def = 29;
SplParser.RULE_colmeta_attrib_name = 30;
SplParser.RULE_colmeta_attrib_value = 31;
SplParser.RULE_as_def = 32;
SplParser.RULE_with_name_def = 33;
SplParser.RULE_solr_mapping = 34;
SplParser.RULE_solr_mapping_def = 35;
SplParser.RULE_solr_mapping_attr_name = 36;
SplParser.RULE_solr_mapping_attr_value = 37;
SplParser.RULE_alignment = 38;
SplParser.RULE_generic_colop_def = 39;
SplParser.RULE_col_op_def = 40;
SplParser.RULE_colcopy = 41;
SplParser.RULE_colcopy_param = 42;
SplParser.RULE_coljoin = 43;
SplParser.RULE_coljoin_param = 44;
SplParser.RULE_colsplit = 45;
SplParser.RULE_colsplit_param = 46;
SplParser.RULE_colrep = 47;
SplParser.RULE_colrep_param = 48;
SplParser.RULE_colfill = 49;
SplParser.RULE_colfill_param = 50;
SplParser.RULE_colmap = 51;
SplParser.RULE_colmap_param = 52;
SplParser.RULE_colcalc = 53;
SplParser.RULE_colcount = 54;
SplParser.RULE_colcount_param = 55;
SplParser.RULE_coldrop = 56;
SplParser.RULE_coldrop_param = 57;
SplParser.RULE_colprint = 58;
SplParser.RULE_colprint_param = 59;
SplParser.RULE_colwhen = 60;
SplParser.RULE_colwhen_param = 61;
SplParser.RULE_colcase = 62;
SplParser.RULE_colcase_when = 63;
SplParser.RULE_colcase_when_nested = 64;
SplParser.RULE_colcase_else = 65;

function SplgContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = SplParser.RULE_splg;
    return this;
}

SplgContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
SplgContext.prototype.constructor = SplgContext;

SplgContext.prototype.EOF = function() {
    return this.getToken(SplParser.EOF, 0);
};

SplgContext.prototype.define = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(DefineContext);
    } else {
        return this.getTypedRuleContext(DefineContext,i);
    }
};

SplgContext.prototype.enterRule = function(listener) {
    if(listener instanceof SplListener ) {
        listener.enterSplg(this);
	}
};

SplgContext.prototype.exitRule = function(listener) {
    if(listener instanceof SplListener ) {
        listener.exitSplg(this);
	}
};




SplParser.SplgContext = SplgContext;

SplParser.prototype.splg = function() {

    var localctx = new SplgContext(this, this._ctx, this.state);
    this.enterRule(localctx, 0, SplParser.RULE_splg);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 133; 
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        do {
            this.state = 132;
            this.define();
            this.state = 135; 
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        } while(_la===SplParser.DEFINE);
        this.state = 137;
        this.match(SplParser.EOF);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function DefineContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = SplParser.RULE_define;
    return this;
}

DefineContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
DefineContext.prototype.constructor = DefineContext;

DefineContext.prototype.namespace = function() {
    return this.getTypedRuleContext(NamespaceContext,0);
};

DefineContext.prototype.table = function() {
    return this.getTypedRuleContext(TableContext,0);
};

DefineContext.prototype.enterRule = function(listener) {
    if(listener instanceof SplListener ) {
        listener.enterDefine(this);
	}
};

DefineContext.prototype.exitRule = function(listener) {
    if(listener instanceof SplListener ) {
        listener.exitDefine(this);
	}
};




SplParser.DefineContext = DefineContext;

SplParser.prototype.define = function() {

    var localctx = new DefineContext(this, this._ctx, this.state);
    this.enterRule(localctx, 2, SplParser.RULE_define);
    try {
        this.state = 141;
        this._errHandler.sync(this);
        var la_ = this._interp.adaptivePredict(this._input,1,this._ctx);
        switch(la_) {
        case 1:
            this.enterOuterAlt(localctx, 1);
            this.state = 139;
            this.namespace();
            break;

        case 2:
            this.enterOuterAlt(localctx, 2);
            this.state = 140;
            this.table();
            break;

        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function NamespaceContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = SplParser.RULE_namespace;
    return this;
}

NamespaceContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
NamespaceContext.prototype.constructor = NamespaceContext;

NamespaceContext.prototype.namespace_def = function() {
    return this.getTypedRuleContext(Namespace_defContext,0);
};

NamespaceContext.prototype.SEMICOLON = function() {
    return this.getToken(SplParser.SEMICOLON, 0);
};

NamespaceContext.prototype.ns_type_def = function() {
    return this.getTypedRuleContext(Ns_type_defContext,0);
};

NamespaceContext.prototype.bundle_type = function() {
    return this.getTypedRuleContext(Bundle_typeContext,0);
};

NamespaceContext.prototype.begins_with = function() {
    return this.getTypedRuleContext(Begins_withContext,0);
};

NamespaceContext.prototype.ns_ctx = function() {
    return this.getTypedRuleContext(Ns_ctxContext,0);
};

NamespaceContext.prototype.ends_with = function() {
    return this.getTypedRuleContext(Ends_withContext,0);
};

NamespaceContext.prototype.file_pattern = function() {
    return this.getTypedRuleContext(File_patternContext,0);
};

NamespaceContext.prototype.enterRule = function(listener) {
    if(listener instanceof SplListener ) {
        listener.enterNamespace(this);
	}
};

NamespaceContext.prototype.exitRule = function(listener) {
    if(listener instanceof SplListener ) {
        listener.exitNamespace(this);
	}
};




SplParser.NamespaceContext = NamespaceContext;

SplParser.prototype.namespace = function() {

    var localctx = new NamespaceContext(this, this._ctx, this.state);
    this.enterRule(localctx, 4, SplParser.RULE_namespace);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 143;
        this.namespace_def();
        this.state = 145;
        this._errHandler.sync(this);
        var la_ = this._interp.adaptivePredict(this._input,2,this._ctx);
        if(la_===1) {
            this.state = 144;
            this.ns_type_def();

        }
        this.state = 148;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        if(_la===SplParser.BUNDLETYPE) {
            this.state = 147;
            this.bundle_type();
        }

        this.state = 151;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        if(_la===SplParser.BEGINS) {
            this.state = 150;
            this.begins_with();
        }
